# OpenF1-python-client

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  context7.json  pyproject.toml
.github/workflows/: workflow.yml
src/openf1_client/: __init__.py  auth.py  client.py  config.py  errors.py  http_client.py  models.py  utils.py
src/openf1_client/endpoints/: __init__.py  base.py  car_data.py  drivers.py  intervals.py  laps.py  location.py  meetings.py  overtakes.py  pit.py  position.py  race_control.py  session_result.py  sessions.py  starting_grid.py  stints.py  team_radio.py  weather.py
tests/: __init__.py  test_client.py  test_config.py  test_errors.py  test_models.py  test_utils.py
