[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openf1-client"
version = "1.0.0"
description = "A production-grade Python client SDK for the OpenF1 Formula 1 API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenF1 Client Contributors"}
]
keywords = ["formula1", "f1", "openf1", "api", "client", "telemetry", "racing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
]
async = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/openf1-client/openf1-python"
Documentation = "https://github.com/openf1-client/openf1-python#readme"
Repository = "https://github.com/openf1-client/openf1-python"
Issues = "https://github.com/openf1-client/openf1-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openf1_client = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=openf1_client --cov-report=term-missing"
